# artisan_cli

./: Cargo.toml  README.md  makefile
.github/workflows/: release.yml
src/: auth.rs  cli.rs  defs.rs  file.rs  formatting.rs  main.rs
