[package]
name = "artisan_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
#artisan_middleware = "5.1.2"
artisan_middleware = { git = "https://github.com/Artisan-Hosting/artisan_lib.git" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "3", features = ["derive"] }
dotenv = "0.15"
dirs = "6.0.0"
base64 = "0.13"