[package]
name = "artisan_cli"
version = "1.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
dirs = "6.0.0"
base64 = "0.13"
owo-colors = "4.2.0"
tabled = "0.19.0"
regex = "1.11.1"
unicode-width = "0.2.0"
crossterm = "0.27"
ratatui = { version = "0.26", features = ["crossterm"] }

[dependencies.artisan_middleware]
#path = "/root/artisan_lib"
version = "5.4.0"
default-features = false
features = ["cli"]